Debugger CSS file included

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         
         <link type="text/css" rel="stylesheet" href="test.css"/>
         <!--linking the css file with the HTML document.This document is used for testing css styles to be removed later -->
+
+        <link type="text/css" rel="stylesheet" href="debugger.css"/>
+        <!--linking the css file with the HTML document.This document is used for debugging css stylesheets -->
         
     </head>
     <body>
