--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
             
-            <div class="wrapper-right">
+            <div id="wrapper-right">
 
 
                 <section class="right-section introduction">
