Contact Section updated

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                             <li class="ad">Address : <br />Paris FRANCE</li>
                             <li class="tel">Mobile : <br />+33-651634750</li>
                             <li class="mail">Email : <br /> jobeditions@gmail.com</li>
-                            <li class="web">WebSite : www.ashokdeb.fr</li>
-                            <li class="skype">Skype : www.ashokdeb.fr</li>
+                            <li class="web">WebSite : <br /> www.ashokdeb.fr</li>
+                            <li class="skype">Skype : <br />www.ashokdeb.fr</li>
                         </ul>
 
                     </div>
@@ -110,6 +110,8 @@
                 <!-- Beginning of Education Section -->
                 <section class="right-section education">
                     <h2>EDUCATION</h2>
+                    <hr>
+                    <br /><br />
                     <article class="content">
                         <div class="left-content">
                       	    <label class="container"><h3>Sep 2005 - Feb 2007</h3>
@@ -141,6 +143,8 @@
                 <!-- Beginning of Experience Section -->
                 <section class="right-section experience">
                     <h2>EXPERIENCE</h2>
+                    <hr />
+                    <br /><br />
                     <article class="content">
                         <div class="left-content">
                       	    <label class="container"><h3>Sep 2005 - Feb 2007</h3>
@@ -172,6 +176,9 @@
                 <!-- Beginning of Reference Section -->
                 <section class="right-section reference">
                     <h2>Reference</h2>
+                    <hr>
+                    <br />
+                    <br />
                     <article class="content">
                         <div class="left-content">
                       	    <label class="container"><h3>Sep 2005 - Feb 2007</h3>
