Hobbies Section Updated

--- a/index.html
+++ b/index.html
@@ -78,9 +78,17 @@
                     <div class="left-banner">
                       	<h1>HOBBIES</h1>
                     </div>
-                    <!-- Begin Hobbies Icons -->
                     <div class="hobbies">
-                     
+                    <!-- Begin Hobbies Icons -->
+                        <div class="swim">
+                        <img src="images/hobby/swim.png" alt="Hobby-Swimming" />
+                        </div>
+                        <div class="cycling">
+                        <img src="images/hobby/Cycling.png" alt="Hobby-Cycling" />
+                        </div>
+                        <div class="table-tennis">
+                        <img src="images/hobby/table-tennis.png" alt="Hobby Table-Tennis" />
+                        </div>   
                     </div>
         	    </footer>
         	<!-- End of Section wrapper-left -->
@@ -93,8 +101,10 @@
 
                 <section class="right-section introduction">
             	<div class="self">
-                  <h1 class="name">Ashok DEB <br />
-                  <span>FreeLance Developer</span></h1>
+                    <div>
+                        <h1 id="name"><span>Ashok<span> DEB </h1>
+                        <p id="name-2">FreeLance Web Developer</p>
+                    </div>
                 </div>
                 <!-- Begin Social -->
                 <div class="social">
