--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         <!--linking the css file with the HTML document.This document is used for debugging css stylesheets -->
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i,900,900i">
+
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+        <!--linking the Font Awesome CDN with the HTML document. -->
+
         
     </head>
     <body>
@@ -101,19 +106,32 @@
 
                 <section class="right-section introduction">
             	<div class="self">
-                    <div>
-                        <h1 class="" ="name"><span>Ashok<span> DEB </h1>
-                        <p class="name-2">FreeLance Web Developer</p>
+                    <div class="self-inner">
+                        <h1 class="name"><span>Ashok</span> DEB </h1>
+                        <p class="name-2"><em>FreeLance Web Developer</em></p>
                     </div>
                 </div>
                 <!-- Begin Social -->
                 <div class="social">
                     <ul>
-                        <li><a class='north' href="#" title="Download .pdf"><img src="images/icons/icn-save.jpg" alt="Download the pdf version" /></a></li>
-                        <li><a class='north' href="javascript:window.print()" title="Print"><img src="images/icons/icn-print.jpg" alt="" /></a></li>
-                        <li><a class='north' id="contact" href="contact/index.html" title="Contact Me"><img src="images/icons/icn-contact.jpg" alt="" /></a></li>
-                        <li><a class='north' href="#" title="Follow me on Twitter"><img src="images/icons/icn-twitter.jpg" alt="" /></a></li>
-                        <li><a class='north' href="#" title="My Facebook Profile"><img src="images/icons/icn-facebook.jpg" alt="" /></a></li>
+                        <li>
+                        	<a href="#" title="Facebook"><i class="fab fa-facebook fa-2x" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                        	<a class="#" href="" title="Twitter"><i class="fab fa-twitter fa-2x" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                        	<a href="#" title="Linkedin"><i class="fab fa-linkedin-in fa-2x"></i></i></a>
+                        </li>
+                        <li>
+                        	<a class="#" href="" title="Github"><i class="fab fa-github fa-2x" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                        	<a id="contact" href="contact/index.html" title="Contact Me"><i class="fas fa-file-contract fa-2x"></i></a>
+                        </li>
+                        <li>
+                        	<a href="javascript:window.print()" title="Print"><i class="fas fa-print fa-2x" aria-hidden="true"></i></a>
+                        </li>
                     </ul>
                 </section>
                 <!-- End of Section Introduction -->
