Jquery CDN and js file included

--- a/index.html
+++ b/index.html
@@ -115,16 +115,16 @@
                 <div class="social">
                     <ul>
                         <li>
-                        	<a href="#" title="Facebook"><i class="fab fa-facebook fa-2x" aria-hidden="true"></i></a>
+                        	<a href="https://www.facebook.com/ashok.devchowdhury" title="Facebook" target="_blank"><i class="fab fa-facebook fa-2x" aria-hidden="true"></i></a>
                         </li>
                         <li>
                         	<a class="#" href="" title="Twitter"><i class="fab fa-twitter fa-2x" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                        	<a href="#" title="Linkedin"><i class="fab fa-linkedin-in fa-2x"></i></i></a>
+                        	<a href="https://www.linkedin.com/in/ashok-deb-020a36145/" title="Linkedin" target="_blank"><i class="fab fa-linkedin-in fa-2x"></i></a>
                         </li>
                         <li>
-                        	<a class="#" href="" title="Github"><i class="fab fa-github fa-2x" aria-hidden="true"></i></a>
+                        	<a class="#" href="https://github.com/jobeditions" title="Github" target="_blank"><i class="fab fa-github fa-2x" aria-hidden="true"></i></a>
                         </li>
                         <li>
                         	<a id="contact" href="contact/index.html" title="Contact Me"><i class="fas fa-file-contract fa-2x"></i></a>
@@ -238,6 +238,9 @@
             <!-- End of div wrapper-right -->
         </div>
         <!-- End of div wrapper -->
+        <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+        <!-- Jquery 3.1 minified version CDN included -->
+
         <script src="javascript.js"></script>
         <!-- linking the javascript file -->
     </body>
