Social buttons CSS added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 
         <!--linking the Font Awesome CDN with the HTML document. -->
 
-        
     </head>
     <body>
     	<!-- Begin Wrapper -->
@@ -241,6 +240,6 @@
         <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
         <!-- Jquery 3.1 minified version CDN included -->
 
-        <script src="javascript.js"></script>
+        <script src="App.js"></script>
         <!-- linking the javascript file -->
     </body>
