Styling with Jquery - Info Section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         	<div class="wrapper-left">
         		
         		<header>
+
                     <div class="photo avatar">
                   	<!-- Begin Image -->
                         <img class="portrait" src="images/self/ashok1.jpg" alt="Ashok DEB" />
@@ -55,7 +56,7 @@
                     <!-- Begin Personal Information -->
                     <div class="info">
                      
-                        <ul>
+                        <ul class="selected">
                             <li class="ad">Address : <br />Paris FRANCE</li>
                             <li class="tel">Mobile : <br />+33-651634750</li>
                             <li class="mail">Email : <br /> jobeditions@gmail.com</li>
