Hobbies Section updated

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <li class="ad">Address : <br />Paris FRANCE</li>
                             <li class="tel">Mobile : <br />+33-651634750</li>
                             <li class="mail">Email : <br /> jobeditions@gmail.com</li>
-                            <li class="web">WebSite : <br /> www.ashokdeb.fr</li>
+                            <li class="web">WebSite : <br /><a href="#" target="_blank">www.ashokdeb.fr</a></li>
                             <li class="skype">Skype : <br />www.ashokdeb.fr</li>
                         </ul>
 
@@ -85,13 +85,13 @@
                     </div>
                     <div class="hobbies">
                     <!-- Begin Hobbies Icons -->
-                        <div class="swim">
+                        <div class="swim selector">
                         <img src="images/hobby/swim.png" alt="Hobby-Swimming" />
                         </div>
-                        <div class="cycling">
+                        <div class="cycling selector">
                         <img src="images/hobby/Cycling.png" alt="Hobby-Cycling" />
                         </div>
-                        <div class="table-tennis">
+                        <div class="table-tennis selector">
                         <img src="images/hobby/table-tennis.png" alt="Hobby Table-Tennis" />
                         </div>   
                     </div>
