Bugs removed Contact + Hobbies Section - Jquery

--- a/index.html
+++ b/index.html
@@ -41,11 +41,17 @@
         	<div class="wrapper-left">
         		
         		<header>
-
-                    <div class="photo avatar">
-                  	<!-- Begin Image -->
-                        <img class="portrait" src="images/self/ashok1.jpg" alt="Ashok DEB" />
+                    <div class="profile">
+                    	<script type ="text/javascript">
+                    		for(i = 0; i < 264; i++){ 
+                    			document.write("<span></span>");
+                    		}
+                        </script>
+                        <div class="photo avatar">
+                  	        <!-- Begin Image -->
+                            <img class="portrait" src="images/self/ashok1.jpg" alt="Ashok DEB" />
                     <!-- End Image -->
+                        </div>
                     </div>
                 </header>
                 
@@ -73,7 +79,7 @@
                     </div>
                     <!-- Begin About Me description -->
                     <div class="aboutme">
-                        <p>
+                        <p class="about-para">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim viverra nibh sed varius. Proin bibendum nunc in sem ultrices posuere. Aliquam ut aliquam lacus.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim viverra nibh sed varius. Proin bibendum nunc in sem ultrices posuere. Aliquam ut aliquam lacus.
                         </p>
                     </div>
@@ -108,7 +114,7 @@
             	<div class="self">
                     <div class="self-inner">
                         <h1 class="name"><span>Ashok</span> DEB </h1>
-                        <p class="name-2"><em>FreeLance Web Developer</em></p>
+                        <p class="name-2"><em><span>Free</span>lance Web Developer</em></p>
                     </div>
                 </div>
                 <!-- Begin Social -->
