Animation Self Section - Jquery

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="photo avatar">
                   	        <!-- Begin Image -->
-                        <img class="portrait" src="images/self/ashok4.jpg" alt="Ashok DEB" />
+                        <img class="portrait" src="images/self/ashok1.jpg" alt="Ashok DEB" />
                     <!-- End Image -->
                     </div>
                     
@@ -114,7 +114,7 @@
                 <section class="right-section introduction">
             	<div class="self">
                     <div class="self-inner">
-                        <h1 class="name"><span>Ashok</span> DEB </h1>
+                        <h1 class="name" style="text-align:left;float:left;">Ashok</h1><h2 class="name-1" style="text-align:right;float:right;">DEB</h2>
                         <p class="name-2"><em><span>Free</span>lance Web Developer</em></p>
                     </div>
                 </div>
