First Sass file included

--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
         <link type="text/css" rel="stylesheet" href="assets/css/reset.css"/>
         <!--linking the reset css file with the HTML document.This document is used to reset the default styling parameters of the the browsers -->
         
-        <link type="text/css" rel="stylesheet" href="test.css"/>
-        <!--linking the css file with the HTML document.This document is used for testing css styles to be removed later -->
-
         <link type="text/css" rel="stylesheet" href="style.css"/>
         <!--linking the css file with the HTML document.This document is used for testing css styles to be removed later -->
 
-        <link type="text/css" rel="stylesheet" media = "screen and (min-width:480px)" href="above480.css"/>
+
+        <!--<link type="text/css" rel="stylesheet" media = "screen and (min-width:480px)" href="above480.css"/>
         <!--linking the css media-query for viewport size more than 480px.-->
 
         <link type="text/css" rel="stylesheet" href="assets/css/debugger.css"/>
@@ -105,7 +103,7 @@
                     </div>   
         	    </footer>
 
-                <div class="social-1">
+                <!--<div class="social-1">
                     <ul>
                         <li>
                             <a href="https://www.facebook.com/ashok.devchowdhury" title="Facebook" target="_blank"><i class="fab fa-facebook fa-2x" aria-hidden="true"></i></a>
@@ -141,7 +139,7 @@
                         <p class="name-2"><em><span>Free</span>lance Web Developer</em></p>
                     </div>
                 </div>
-                <!-- Begin Social -->
+                <!--Begin Social -->
                 <div class="social">
                     <ul>
                         <li>
