Sass Nesting Styles - Best Practices

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                     <!-- Begin About Me description -->
                     <div class="aboutme">
-                        <p class="about-para">
+                        <p class="content-info">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim viverra nibh sed varius. Proin bibendum nunc in sem ultrices posuere. Aliquam ut aliquam lacus.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim viverra nibh sed varius. Proin bibendum nunc in sem ultrices posuere. Aliquam ut aliquam lacus.
                         </p>
                     </div>
@@ -174,26 +174,26 @@
                     </div>
 
                     <article class="content">
-                        <div class="left-content">
+                        <div class="content-left">
                       	    <label class="container"><h3>Sep 2005 - Feb 2007</h3>
                             <input type="radio" name="selection">
                             <span class="checkmark"></span>
                             </label>
                         </div>
-                        <div class="right-content">
+                        <div class="content-right">
                             <p>Academy of Art University, London <br />
                             <em>Master in Communication Design</em></p>
                         </div>
                     </article>
 
                     <article class="content">
-                        <div class="left-content">
+                        <div class="content-left">
                       	    <label class="container"><h3>Sep 2005 - Feb 2007</h3>
                             <input type="radio" name="selection">
                             <span class="checkmark"></span>
                             </label>
                         </div>
-                        <div class="right-content">
+                        <div class="content-right">
                             <p>Academy of Art University, London <br />
                             <em>Master in Communication Design</em></p>
                         </div>
@@ -212,26 +212,26 @@
                     </div>
                     
                     <article class="content">
-                        <div class="left-content">
+                        <div class="content-left">
                       	    <label class="container"><h3>Sep 2005 - Feb 2007</h3>
                             <input type="radio" name="selection">
                             <span class="checkmark"></span>
                             </label>
                         </div>
-                        <div class="right-content">
+                        <div class="content-right">
                         	<h3></h3>
                             <p><em>Developing support features for the Daedelus VM project</em> on Ouroboros ecosystem.The project helps the existing SOLIDITY developers to migrate to CARDANO - without having to learn to code in PLUTUS. This avoids the high cost of hiring specially trained PLUTUS developers.</p>
                         </div>
                     </article>
 
                     <article class="content">
-                        <div class="left-content">
+                        <div class="content-left">
                       	    <label class="container"><h3>Sep 2005 - Feb 2007</h3>
                             <input type="radio" name="selection">
                             <span class="checkmark"></span>
                             </label>
                         </div>
-                        <div class="right-content">
+                        <div class="content-right">
                             <p>Academy of Art University, London <br />
                             <em>Master in Communication Design</em></p>
                         </div>
@@ -250,25 +250,25 @@
                     </div>
                     
                     <article class="content">
-                        <div class="left-content">
+                        <div class="content-left">
                       	    <label class="container"><h3>Sep 2005 - Feb 2007</h3>
                             <input type="radio" name="selection">
                             <span class="checkmark"></span>
                             </label>
                         </div>
-                        <div class="right-content">
+                        <div class="content-right">
                             <p>Academy of Art University, London <br />
                             <em>Master in Communication Design</em></p>
                         </div>
                     </article>
                     <article class="content">
-                        <div class="left-content">
+                        <div class="content-left">
                       	    <label class="container"><h3>Sep 2005 - Feb 2007</h3>
                             <input type="radio" name="selection">
                             <span class="checkmark"></span>
                             </label>
                         </div>
-                        <div class="right-content">
+                        <div class="content-right">
                             <p>Academy of Art University, London <br />
                             <em>Master in Communication Design</em></p>
                         </div>
