--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 
         <title>Ashok DEB - CV</title>
         <!-- declares the title of the site that appears in the title bar of the page.It helps the search engines to locate the site in case with the "keys words" declared -->
+
         <link rel="icon" type="image/ico" href="ressources/icones/favicon.ico"/>
         <!-- for the icon in title bar -->
 
         <link type="text/css" rel="stylesheet" href="css/style.css"/>
-        <!--linking the css file with the HTML document.This document is used for testing css styles to be removed later -->
+        <!--linking the css file with the HTML document.The CSS output of the Sass file style.scss is stored in this file -->
 
         <!--<link type="text/css" rel="stylesheet" media = "screen and (min-width:480px)" href="above480.css"/>
         <!--linking the css media-query for viewport size more than 480px.-->
