Right Section - Components Headings

--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
                 </header>
 
                 <article class="block-contact">
-                    <div class="left-banner">
-                   	    <h1>Contact</h1>
-                    </div>
+
+                  <div class="left-banner">
+                   	 <h1>Contact</h1>
+                  </div>
                     <!-- Begin Personal Information -->
                     <div class="info">
 
@@ -198,7 +199,7 @@
 
                     <article class="content">
                         <div class="content-left">
-                      	    <label class="container"><h3>Sep 2005 - Feb 2007</h3>
+                      	    <label class="cont"><h3>Sep 2005 - Feb 2007</h3>
                             <input type="radio" name="selection">
                             <span class="checkmark"></span>
                             </label>
@@ -236,7 +237,7 @@
 
                     <article class="content">
                         <div class="content-left">
-                      	    <label class="container"><h3>Sep 2005 - Feb 2007</h3>
+                      	    <label class="cont"><h3>Sep 2005 - Feb 2007</h3>
                             <input type="radio" name="selection">
                             <span class="checkmark"></span>
                             </label>
@@ -248,7 +249,7 @@
                     </article>
                     <article class="content">
                         <div class="content-left">
-                      	    <label class="container"><h3>Sep 2005 - Feb 2007</h3>
+                      	    <label class="cont"><h3>Sep 2005 - Feb 2007</h3>
                             <input type="radio" name="selection">
                             <span class="checkmark"></span>
                             </label>
