Right Section - Right Content

--- a/index.html
+++ b/index.html
@@ -199,14 +199,15 @@
 
                     <article class="content">
                         <div class="content-left">
-                      	    <label class="cont"><h3>Sep 2005 - Feb 2007</h3>
+                      	    <label class="cont"><h3>June 2018 - Till Date</h3>
                             <input type="radio" name="selection">
                             <span class="checkmark"></span>
                             </label>
                         </div>
                         <div class="content-right">
-                        	<h3></h3>
-                            <p><em>Developing support features for the Daedelus VM project</em> on Ouroboros ecosystem.The project helps the existing SOLIDITY developers to migrate to CARDANO - without having to learn to code in PLUTUS. This avoids the high cost of hiring specially trained PLUTUS developers.</p>
+                           <h3>OuroBoros-IOHK</h3>
+                        	 <h4>BlockChain Protocol Developer</h4>
+                           <p>Developing support features for the Daedelus VM project on Ouroboros ecosystem.The project helps the existing SOLIDITY developers to migrate to CARDANO - without having to learn to code in PLUTUS. This avoids the high cost of hiring specially trained PLUTUS developers.</p>
                         </div>
                     </article>
 
@@ -218,8 +219,9 @@
                             </label>
                         </div>
                         <div class="content-right">
-                            <p>Academy of Art University, London <br />
-                            <em>Master in Communication Design</em></p>
+                           <h3>Nebulus.io</h3>
+                           <h4>Code Contributor to Nebulus Eco-System</h4>
+                           <p>My objectives were to integrate a debugging tool within Nebulus VM capable to detect and analyse the vulnerabilities in creation and implementing of smart contracts/Dapps.Studied in depth the implementation of Proof of Devotion consensus algorithm.</p>
                         </div>
                     </article>
 
