Right Section - Mixing - Headings

--- a/index.html
+++ b/index.html
@@ -205,15 +205,15 @@
                             </label>
                         </div>
                         <div class="content-right">
-                           <h3>OuroBoros-IOHK</h3>
+                           <h3><em>OuroBoros-IOHK</em></h3>
                         	 <h4>BlockChain Protocol Developer</h4>
-                           <p>Developing support features for the Daedelus VM project on Ouroboros ecosystem.The project helps the existing SOLIDITY developers to migrate to CARDANO - without having to learn to code in PLUTUS. This avoids the high cost of hiring specially trained PLUTUS developers.</p>
+                           <p><em>Developing support features for the Daedelus VM project.</em>The project involves creating a Solidity to Plutus compiler thus making Cardano accesible to Solidity Developers</p>
                         </div>
                     </article>
 
                     <article class="content">
                         <div class="content-left">
-                      	    <label class="container"><h3>Sep 2005 - Feb 2007</h3>
+                      	    <label class="container"><h3>Nov 2017 - June 2018</h3>
                             <input type="radio" name="selection">
                             <span class="checkmark"></span>
                             </label>
@@ -221,7 +221,21 @@
                         <div class="content-right">
                            <h3>Nebulus.io</h3>
                            <h4>Code Contributor to Nebulus Eco-System</h4>
-                           <p>My objectives were to integrate a debugging tool within Nebulus VM capable to detect and analyse the vulnerabilities in creation and implementing of smart contracts/Dapps.Studied in depth the implementation of Proof of Devotion consensus algorithm.</p>
+                           <p><em>Integrated a debugging tool within Nebulus VM capable to detect and analyse the vulnerabilities in implementing of smart contracts.</em>Studied the implementation of Proof of Devotion consensus algorithm.</p>
+                        </div>
+                    </article>
+
+                    <article class="content">
+                        <div class="content-left">
+                      	    <label class="container"><h3>Nov 2017 - June 2018</h3>
+                            <input type="radio" name="selection">
+                            <span class="checkmark"></span>
+                            </label>
+                        </div>
+                        <div class="content-right">
+                           <h3>OU en France</h3>
+                           <h4>Trainee/Stagiare</h4>
+                           <p> Was responsible to create a primary e-commerce site along with a global system of login the clients to the site.</p>
                         </div>
                     </article>
 
