Right Section Completed - 1

--- a/index.html
+++ b/index.html
@@ -161,27 +161,29 @@
 
                     <article class="content">
                         <div class="content-left">
-                      	    <label class="container"><h3>Sep 2005 - Feb 2007</h3>
+                      	    <label class="container"><h3>Jan 2019 - Till Date </h3>
                             <input type="radio" name="selection">
                             <span class="checkmark"></span>
                             </label>
                         </div>
                         <div class="content-right">
-                            <p>Academy of Art University, London <br />
-                            <em>Master in Communication Design</em></p>
+                          <h3>Openclassrooms</h3>
+                          <h4>Junior Web Developer</h4>
+                          <p>FullStact Web Development using JS technologies Node and React.</p>
                         </div>
                     </article>
 
                     <article class="content">
                         <div class="content-left">
-                      	    <label class="container"><h3>Sep 2005 - Feb 2007</h3>
+                      	    <label class="container"><h3> 2004 - 2010</h3>
                             <input type="radio" name="selection">
                             <span class="checkmark"></span>
                             </label>
                         </div>
                         <div class="content-right">
-                            <p>Academy of Art University, London <br />
-                            <em>Master in Communication Design</em></p>
+                          <h3>Manipal Institute of Technology</h3>
+                          <h4>Bachelor of Engineering (Instrumentation)</h4>
+                          <p>4 years degree program in engineering from one of the most prestigious institutes in India</p>
                         </div>
                     </article>
 
@@ -221,7 +223,7 @@
                         <div class="content-right">
                            <h3>Nebulus.io</h3>
                            <h4>Code Contributor to Nebulus Eco-System</h4>
-                           <p><em>Integrated a debugging tool within Nebulus VM capable to detect and analyse the vulnerabilities in implementing of smart contracts.</em>Studied the implementation of Proof of Devotion consensus algorithm.</p>
+                           <p><em>Integrated a debugging tool within Nebulus VM capable to detect and analyse the vulnerabilities in implementing of smart contracts.</em></p>
                         </div>
                     </article>
 
@@ -251,29 +253,21 @@
                         <hr>
                     </div>
 
-                    <article class="content">
-                        <div class="content-left">
-                      	    <label class="cont"><h3>Sep 2005 - Feb 2007</h3>
-                            <input type="radio" name="selection">
-                            <span class="checkmark"></span>
-                            </label>
+                    <article class="contents">
+                        <div class="contents-ref">
+                      	  <p>FABIEN DELATTRE  </br>
+                             Co-Founder: Captain Abbot</br>
+                             Ph: </br>
+                             Email: fabien.delattre@abbot.fr</p>
                         </div>
-                        <div class="content-right">
-                            <p>Academy of Art University, London <br />
-                            <em>Master in Communication Design</em></p>
+                        <div class="contents-ref">
+                          <p>FABIEN DELATTRE  </br>
+                             Co-Founder: Captain Abbot</br>
+                             Ph: </br>
+                             Email: fabien.delattre@abbot.fr</p>
                         </div>
                     </article>
-                    <article class="content">
-                        <div class="content-left">
-                      	    <label class="cont"><h3>Sep 2005 - Feb 2007</h3>
-                            <input type="radio" name="selection">
-                            <span class="checkmark"></span>
-                            </label>
-                        </div>
-                        <div class="content-right">
-                            <p>Academy of Art University, London <br />
-                            <em>Master in Communication Design</em></p>
-                        </div>
+
                     </article>
 
                 </section>
