Compass - Book - Heading Education - Debugged

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
                     <article class="content">
                         <div class="content-left">
-                      	    <label class="container"><h3>Jan 2019 - Till Date </h3>
+                      	    <label class="date"><h3>Jan 2019 - Till Date </h3>
                             <input type="radio" name="selection">
                             <span class="checkmark"></span>
                             </label>
@@ -175,7 +175,7 @@
 
                     <article class="content">
                         <div class="content-left">
-                      	    <label class="container"><h3> 2004 - 2010</h3>
+                      	    <label class="date"><h3> 2004 - 2010</h3>
                             <input type="radio" name="selection">
                             <span class="checkmark"></span>
                             </label>
@@ -201,7 +201,7 @@
 
                     <article class="content">
                         <div class="content-left">
-                      	    <label class="cont"><h3>June 2018 - Till Date</h3>
+                      	    <label class="date"><h3>June 2018 - Till Date</h3>
                             <input type="radio" name="selection">
                             <span class="checkmark"></span>
                             </label>
@@ -215,7 +215,7 @@
 
                     <article class="content">
                         <div class="content-left">
-                      	    <label class="container"><h3>Nov 2017 - June 2018</h3>
+                      	    <label class="date"><h3>Nov 2017 - June 2018</h3>
                             <input type="radio" name="selection">
                             <span class="checkmark"></span>
                             </label>
@@ -229,7 +229,7 @@
 
                     <article class="content">
                         <div class="content-left">
-                      	    <label class="container"><h3>Nov 2017 - June 2018</h3>
+                      	    <label class="date"><h3>Nov 2017 - June 2018</h3>
                             <input type="radio" name="selection">
                             <span class="checkmark"></span>
                             </label>
